--- a/models/deploy/core/utils.yml
+++ b/models/deploy/core/utils.yml
@@ -204,6 +204,7 @@ models:
               args: 123456789
               assertions: 
               - result = '111010110111100110100010101'
+      - name: udf_int_to_binary
         tests:
           - test_udf:
               name: test_utils__udf_int_to_binary_large_number
@@ -213,10 +214,17 @@ models:
       - name: udf_binary_to_int
         tests:
           - test_udf:
-              name: test_utils__udf_int_to_binary
+              name: test_utils__udf_binary_to_int
               args: '111010110111100110100010101'
               assertions: 
               - result = '123456789'
+      - name: udf_binary_to_int
+        tests:
+          - test_udf:
+              name: test_utils__udf_binary_to_int_large_number
+              args: "'110110110100110110100101110101100110100000101111100010101'"
+              assertions: 
+              - result = '123456789123456789'
       - name: udf_evm_decode_log
         tests:
           - test_udf:
