--- a/models/deploy/core/utils.yml
+++ b/models/deploy/core/utils.yml
@@ -197,6 +197,34 @@ models:
                   [['array', [0, 1, 2]]]
               assertions:
                 - result = 'array=%5B0%2C+1%2C+2%5D'
+      - name: udf_int_to_binary
+        tests:
+          - test_udf:
+              name: test_utils__udf_int_to_binary
+              args: 123456789
+              assertions: 
+              - result = '111010110111100110100010101'
+      - name: udf_int_to_binary
+        tests:
+          - test_udf:
+              name: test_utils__udf_int_to_binary_large_number
+              args: "'123456789123456789123456789123456789123456789'"
+              assertions: 
+              - result = '101100010010011011011100101001111010001001110011010111111101111101010111011001001101000001111110001010100001011011010000100000001000101111100010101'
+      - name: udf_binary_to_int
+        tests:
+          - test_udf:
+              name: test_utils__udf_binary_to_int
+              args: '111010110111100110100010101'
+              assertions: 
+              - result = '123456789'
+      - name: udf_binary_to_int
+        tests:
+          - test_udf:
+              name: test_utils__udf_binary_to_int_large_number
+              args: "'110110110100110110100101110101100110100000101111100010101'"
+              assertions: 
+              - result = '123456789123456789'
       - name: udf_evm_decode_log
         tests:
           - test_udf:
