STREAM-1108 near-models import and compile success | Update -> dbt v1.7.0 to compile near-models | Remove fsc_utils deps from upstream near-models

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,6 +36,10 @@ models:
         +tags: evm
       marketplace:
         +tags: marketplace
+  near_models:
+      gold:
+        core:
+          +materialized: ephemeral
 
 tests:
   +store_failures: true # all tests
