--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,6 +34,10 @@ models:
           +enabled: '{{ true if env_var("ENABLE_SNOWFLAKE_SECRETS", "") else false }}'
       evm:
         +tags: evm
+        silver:
+          streamline:
+            +materialized: ephemeral
+            +enabled: true
       marketplace:
         +tags: marketplace
       near:
@@ -48,14 +52,62 @@ models:
       core:
         +schema: core
         +materialized: ephemeral
-        fact_blocks:
-          +enabled: false
+        +enabled: false
+        core__fact_blocks:
+          +enabled: true
+      stats:
+        +enabled: false
     silver:
       streamline:
         +materialized: ephemeral
         silver__streamline_blocks:
-          +enabled: false 
-
+          +enabled: false
+      stats:
+        +enabled: false
+  fsc_evm:
+    +enabled: false # disable fsc_evm package by default
+    +copy_grants: true
+    +persist_docs:
+      relation: true
+      columns: true
+    +on_schema_change: "append_new_columns"
+    main_package:
+      +enabled: false # disable main_package by default, enabled other packages as needed
+      core:
+        +enabled: false # enable subpackages, as needed
+        gold:
+          +enabled: false
+          +materialized: ephemeral
+          core__fact_blocks:
+            +enabled: true
+        silver:
+          +materialized: ephemeral
+          silver__blocks:
+            +enabled: false
+          tests:
+            +enabled: false
+          streamline:
+            +enabled: false
+      github_actions:
+        +enabled: true
+      labels:
+        +enabled: true
+      prices:
+        +enabled: true
+      utils:
+        +enabled: true
+    decoder_package:
+      +enabled: false
+      abis:
+        +enabled: false
+      decoded_logs:
+        +enabled: false
+    curated_package:
+      +enabled: false
+      protocols:
+        +enabled: false
+        vertex:
+          +enabled: false
 
 tests:
   +store_failures: true # all tests
@@ -65,7 +117,9 @@ tests:
         blockpour:
           # TODO: enable tests for blockpour once we get an API key
           +enabled: false
-
+  near_models:
+    silver:
+      +enabled: false
 
 on-run-start:
   - "{{ create_sps() }}"
@@ -81,7 +135,6 @@ on-run-end:
 # using the `{{ config(...) }}` macro.
 
 vars:
-  
   near_models:
     UPDATE_UDFS_AND_SPS: false
 
