--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -53,11 +53,23 @@ models:
         +materialized: ephemeral
         core__fact_blocks:
           +enabled: true
+        core__fact_transactions:
+          +enabled: true
     silver:
       streamline:
         +materialized: ephemeral
         silver__streamline_blocks:
-          +enabled: false
+          +enabled: true
+        silver__streamline_receipts:
+          +enabled: true
+        silver__streamline_receipts_final:
+          +enabled: true
+        silver__streamline_transactions:
+          +enabled: true
+        silver__streamline_transactions_final:
+          +enabled: true
+        silver__flatten_receipts:
+          +enabled: true
 
 
 tests:
