--- a/packages.yml
+++ b/packages.yml
@@ -3,3 +3,5 @@ packages:
     version: [">=0.8.0", "<0.9.0"]
   - package: dbt-labs/dbt_utils
     version: [">=1.0.0", "<1.1.0"]
+  - git: "https://github.com/FlipsideCrypto/fsc-evm.git"
+    revision: "STREAM-1049/add-package-name-for-livequery"
