--- a/selectors.yml
+++ b/selectors.yml
@@ -7,3 +7,6 @@ selectors:
         - exclude:
           - livequery_models.deploy.marketplace.quicknode.test_quicknode_solana*
           - livequery_models.deploy.marketplace.quicknode.test_quicknode_polygon*
+          - livequery_models.deploy.marketplace.bitquery.* # API Credits not enough
+          - livequery_models.deploy.marketplace.covalent.* # API Credits not enough
+          - livequery_models.deploy.marketplace.cmc.* # Cloudflare is blocking snowflake from accessing the endpoint
