--- a/models/deploy/marketplace/footprint/footprint_utils__footprint_utils.yml
+++ b/models/deploy/marketplace/footprint/footprint_utils__footprint_utils.yml
@@ -7,13 +7,13 @@ models:
           - test_udf:
               name: test_footprint_utils__get_status_200_v2_protocol_info
               args: >
-                '/v2/protocol/info'
+                '/v3/protocol/getProtocolStatsHistory'
                 , {
-                  'chain': 'Ethereum',
-                  'protocol_slug': 'the-sandbox',
-                  'limit': 10,
-                  'offset': 0
-                }
+                    'chain': 'Polygon',
+                    'protocol_slug': 'planet-ix',
+                    'start_time': '2023-07-01',
+                    'end_time': '2023-07-25'
+                  }
               assertions:
                 - result:status_code = 200
                 - result:error IS NULL
