--- a/models/deploy/marketplace/subquery/subquery__.yml
+++ b/models/deploy/marketplace/subquery/subquery__.yml
@@ -7,8 +7,23 @@ models:
           - test_udf:
               name: test_subquery__graphql_status_200
               args: >
-                'kepler-network'
-                , {'query':'query { _mmrs (first: 5) { nodes { key } } }'}
+                'subquery-mainnet',
+                {
+                  'query': '{
+                    _pois(first: 5) {
+                      nodes {
+                        id
+                        chainBlockHash
+                        hash
+                        parentHash
+                        createdAt
+                        operationHashRoot
+                        nodeId
+                        updatedAt
+                      }
+                    }
+                  }'
+                }
               assertions:
                 - result:status_code = 200
                 - result:error IS NULL
