--- a/selectors.yml
+++ b/selectors.yml
@@ -10,6 +10,7 @@ selectors:
           - livequery_models.deploy.marketplace.bitquery.* # API Credits not enough
           - livequery_models.deploy.marketplace.covalent.* # API Credits not enough
           - livequery_models.deploy.marketplace.coingecko.* # API Credits not enough
+          - livequery_models.deploy.marketplace.dappradar.* # Not enough API Credits
           - livequery_models.deploy.marketplace.allday.* # GraphQL API not working
           - livequery_models.deploy.marketplace.playgrounds.* # API Endpoints not working
           - livequery_models.deploy.marketplace.strangelove.* # API Endpoints not working
