Update marketplace API tests and configurations
- Exclude additional marketplace API tests due to API credit or endpoint issues
- Add pull request trigger for UDF tests
- Update various marketplace API UDFs with improvements:
  * Add version support for Alchemy NFT API
  * Update API endpoints and headers for DappRadar
  * Modify API call parameters for various services
  * Standardize NULL handling in API calls
- Update test configurations for multiple marketplace APIs to use dynamic or corrected parameters

--- a/.github/workflows/dbt_udf_test.yml
+++ b/.github/workflows/dbt_udf_test.yml
@@ -25,6 +25,10 @@ on:
   schedule:
     # Runs “Daily at midnight GMT” (see https://crontab.guru)
     - cron: '0 0 * * *'
+  pull_request:
+    paths:
+      - 'models/deploy/marketplace/**'
+      - 'macros/marketplace/**'
 
 concurrency:
   group: ${{ github.workflow }}
@@ -46,4 +50,13 @@ jobs:
     with:
       warehouse: ${{ inputs.warehouse }}
       environment: ${{ inputs.environment }}
+      command: dbt test --selector test_udfs --threads 24
+
+  pull_request:
+    uses: ./.github/workflows/dbt.yml
+    if: github.event_name == 'pull_request'
+    secrets: inherit
+    with:
+      warehouse: ${{ vars.WAREHOUSE }}
+      environment: dev
       command: dbt test --selector test_udfs --threads 24
