remove apilayer from test

--- a/selectors.yml
+++ b/selectors.yml
@@ -13,3 +13,4 @@ selectors:
           - livequery_models.deploy.marketplace.allday.* # GraphQL API not working
           - livequery_models.deploy.marketplace.playgrounds.* # API Endpoints not working
           - livequery_models.deploy.marketplace.strangelove.* # API Endpoints not working
+          - livequery_models.deploy.marketplace.apilayer.* # API Endpoints not working
