--- a/packages.yml
+++ b/packages.yml
@@ -5,3 +5,6 @@ packages:
     version: [">=1.0.0", "<1.1.0"]
   - git: https://github.com/FlipsideCrypto/livequery-base.git
     revision: v1.0.1
+  - git: https://github.com/FlipsideCrypto/livequery-models.git
+    revision: "v1.6.0"
+
