fixed block_height input param naming collisiong | added tf_fact_tx wip

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -51,12 +51,18 @@ models:
         +materialized: ephemeral
         core__fact_blocks:
           +enabled: true
+        core__fact_transactions:
+          +enabled: true
     silver:
       core:
         +materialized: ephemeral
         silver__blocks_final:
           +enabled: true
         silver__blocks_v2:
+          +enabled: true
+        silver__transactions_final:
+          +enabled: true
+        silver__transactions_v2:
           +enabled: true
 
 
