add near_models configs

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -106,6 +106,9 @@ vars:
   STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: False
   STUDIO_TEST_USER_ID: '{{ env_var("STUDIO_TEST_USER_ID", "98d15c30-9fa5-43cd-9c69-3d4c0bb269f5") }}'
 
+  # Near Live Table Config
+  MANUAL_FIX: False
+
   API_INTEGRATION: '{{ var("config")[target.name]["API_INTEGRATION"] }}'
   EXTERNAL_FUNCTION_URI: '{{ var("config")[target.name]["EXTERNAL_FUNCTION_URI"] }}'
   ROLES: '{{ var("config")[target.name]["ROLES"] }}'
