--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -73,7 +73,7 @@ vars:
   # The keys correspond to dbt profiles and are case sensitive
     dev:
       API_INTEGRATION: AWS_LIVE_QUERY_STG
-      EXTERNAL_FUNCTION_URI: u5z0tu43sc.execute-api.us-east-1.amazonaws.com/stg/
+      EXTERNAL_FUNCTION_URI: yn4219e0o6.execute-api.us-east-1.amazonaws.com/stg/
       ROLES:
         - INTERNAL_DEV
       MAX_BATCH_ROWS: 10
