--- a/models/deploy/core/live.yml
+++ b/models/deploy/core/live.yml
@@ -7,10 +7,10 @@ models:
           - test_udf:
               name: test__live_udf_api_batched_post_data_object
               args: |
-                'GET', 
-                'https://httpbin.org/get', 
-                {'Content-Type': 'application/json'}, 
-                {'param1': 'value1', 'param2': 'value2'}, 
+                'GET',
+                'https://httpbin.org/get',
+                {'Content-Type': 'application/json'},
+                {'param1': 'value1', 'param2': 'value2'},
                 ''
               assertions:
                 - result:status_code = 200
@@ -168,3 +168,255 @@ models:
                 - result:data[1]:jsonrpc = '2.0'
                 - result:data[1]:id = 2
                 - result:data[1]:result = '0x1'
+
+      - name: udf_api_v2
+        tests:
+          # Convenience overloads (always sync)
+          - test_udf:
+              name: test__live_udf_api_v2_post_data_object_sync
+              args: |
+                'https://httpbin.org/post', {'foo': 'bar'}
+              assertions:
+                - result:data.json is not null
+                - result:data.json = OBJECT_CONSTRUCT('foo', 'bar')
+          - test_udf:
+              name: test__live_udf_api_v2_post_data_array_sync
+              args: |
+                'https://httpbin.org/post', ['foo', 'bar']
+              assertions:
+                - result:data.json is not null
+                - result:data.json = ARRAY_CONSTRUCT('foo', 'bar')
+          - test_udf:
+              name: test__live_udf_api_v2_post_data_string_sync
+              args: |
+                'https://httpbin.org/post', 'foo'::VARIANT
+              assertions:
+                - result:data.json is not null
+                - result:data.json = 'foo'
+          - test_udf:
+              name: test__live_udf_api_v2_get_method_sync
+              args: |
+                'https://httpbin.org/get'
+              assertions:
+                - result:status_code = 200
+                - result:data.url = 'https://httpbin.org/get'
+          - test_udf:
+              name: test__live_udf_api_v2_post_batch_jsonrpc_sync
+              args: |
+                'https://httpbin.org/post', {
+                  'jsonrpc': '2.0',
+                  'id': 1,
+                  'method': 'batch',
+                  'params': [
+                    {'id': 1, 'method': 'method1', 'params': {'param1': 'value1'}},
+                    {'id': 2, 'method': 'method2', 'params': {'param2': 'value2'}}
+                  ]
+                }
+              assertions:
+                - result:status_code = 200
+                - result:data.json:jsonrpc = '2.0'
+                - result:data.json:id = 1
+                - result:data.json:method = 'batch'
+                - result:data.json:params is not null
+                - result:data.json:params[0]:id = 1
+                - result:data.json:params[1]:id = 2
+
+          # Full signature tests - SYNC mode
+          - test_udf:
+              name: test__live_udf_api_v2_get_with_params_sync
+              args: |
+                'GET', 'https://httpbin.org/get', {'Content-Type': 'application/json'}, {'param1': 'value1', 'param2': 'value2'}, ''
+              assertions:
+                - result:status_code = 200
+                - result:data.args is not null
+                - result:data.args:param1 = 'value1'
+                - result:data.args:param2 = 'value2'
+          - test_udf:
+              name: test__live_udf_api_v2_post_jsonrpc_solana_sync
+              args: |
+                'POST',
+                'https://api.mainnet-beta.solana.com',
+                {'Content-Type': 'application/json'},
+                {
+                  'jsonrpc': '2.0',
+                  'id': 1,
+                  'method': 'getVersion'
+                },
+                ''
+              assertions:
+                - result:status_code = 200
+                - result:data.jsonrpc = '2.0'
+                - result:data.id = 1
+                - result:data.result is not null
+          - test_udf:
+              name: test__live_udf_api_v2_post_jsonrpc_solana_batch_sync
+              args: |
+                'POST',
+                'https://api.mainnet-beta.solana.com',
+                {'Content-Type': 'application/json'},
+                [
+                  {'jsonrpc': '2.0', 'id': 1, 'method': 'getVersion'},
+                  {'jsonrpc': '2.0', 'id': 2, 'method': 'getVersion'}
+                ],
+                ''
+              assertions:
+                - result:status_code = 200
+                - result:data[0]:jsonrpc = '2.0'
+                - result:data[0]:id = 1
+                - result:data[0]:result is not null
+                - result:data[1]:jsonrpc = '2.0'
+                - result:data[1]:id = 2
+                - result:data[1]:result is not null
+          - test_udf:
+              name: test__live_udf_api_v2_post_jsonrpc_ethereum_batch_sync
+              args: |
+                'POST',
+                'https://ethereum-rpc.publicnode.com',
+                {'Content-Type': 'application/json'},
+                [
+                  {'jsonrpc': '2.0', 'id': 1, 'method': 'eth_blockNumber', 'params': []},
+                  {'jsonrpc': '2.0', 'id': 2, 'method': 'eth_chainId', 'params': []}
+                ],
+                ''
+              assertions:
+                - result:status_code = 200
+                - result:data[0]:jsonrpc = '2.0'
+                - result:data[0]:id = 1
+                - result:data[0]:result is not null
+                - result:data[1]:jsonrpc = '2.0'
+                - result:data[1]:id = 2
+                - result:data[1]:result = '0x1'
+
+          # Full signature tests - ASYNC mode
+          - test_udf:
+              name: test__live_udf_api_v2_get_with_params_async
+              args: |
+                'GET', 'https://httpbin.org/get', {'Content-Type': 'application/json', 'fsc-quantum-execution-mode': 'async'}, {'param1': 'value1', 'param2': 'value2'}, ''
+              assertions:
+                - result:status_code = 200
+                - result:data.args is not null
+                - result:data.args:param1 = 'value1'
+                - result:data.args:param2 = 'value2'
+          - test_udf:
+              name: test__live_udf_api_v2_post_jsonrpc_solana_async
+              args: |
+                'POST',
+                'https://api.mainnet-beta.solana.com',
+                {'Content-Type': 'application/json', 'fsc-quantum-execution-mode': 'async'},
+                {
+                  'jsonrpc': '2.0',
+                  'id': 1,
+                  'method': 'getVersion'
+                },
+                ''
+              assertions:
+                - result:status_code = 200
+                - result:data.jsonrpc = '2.0'
+                - result:data.id = 1
+                - result:data.result is not null
+          - test_udf:
+              name: test__live_udf_api_v2_post_jsonrpc_solana_batch_async
+              args: |
+                'POST',
+                'https://api.mainnet-beta.solana.com',
+                {'Content-Type': 'application/json', 'fsc-quantum-execution-mode': 'async'},
+                [
+                  {'jsonrpc': '2.0', 'id': 1, 'method': 'getVersion'},
+                  {'jsonrpc': '2.0', 'id': 2, 'method': 'getVersion'}
+                ],
+                ''
+              assertions:
+                - result:status_code = 200
+                - result:data[0]:jsonrpc = '2.0'
+                - result:data[0]:id = 1
+                - result:data[0]:result is not null
+                - result:data[1]:jsonrpc = '2.0'
+                - result:data[1]:id = 2
+                - result:data[1]:result is not null
+          - test_udf:
+              name: test__live_udf_api_v2_post_jsonrpc_ethereum_batch_async
+              args: |
+                'POST',
+                'https://ethereum-rpc.publicnode.com',
+                {'Content-Type': 'application/json', 'fsc-quantum-execution-mode': 'async'},
+                [
+                  {'jsonrpc': '2.0', 'id': 1, 'method': 'eth_blockNumber', 'params': []},
+                  {'jsonrpc': '2.0', 'id': 2, 'method': 'eth_chainId', 'params': []}
+                ],
+                ''
+              assertions:
+                - result:status_code = 200
+                - result:data[0]:jsonrpc = '2.0'
+                - result:data[0]:id = 1
+                - result:data[0]:result is not null
+                - result:data[1]:jsonrpc = '2.0'
+                - result:data[1]:id = 2
+                - result:data[1]:result = '0x1'
+
+          # Explicit is_async boolean parameter tests
+          - test_udf:
+              name: test__live_udf_api_v2_get_with_headers_is_async_true
+              args: |
+                'https://httpbin.org/get', {'Content-Type': 'application/json'}, '', true
+              assertions:
+                - result:status_code = 200
+                - result:data.url = 'https://httpbin.org/get'
+          - test_udf:
+              name: test__live_udf_api_v2_get_with_headers_is_async_false
+              args: |
+                'https://httpbin.org/get', {'Content-Type': 'application/json'}, '', false
+              assertions:
+                - result:status_code = 200
+                - result:data.url = 'https://httpbin.org/get'
+          - test_udf:
+              name: test__live_udf_api_v2_full_signature_is_async_true
+              args: |
+                'GET', 'https://httpbin.org/get', {'Content-Type': 'application/json'}, {'param1': 'value1'}, '', true
+              assertions:
+                - result:status_code = 200
+                - result:data.args is not null
+                - result:data.args:param1 = 'value1'
+          - test_udf:
+              name: test__live_udf_api_v2_full_signature_is_async_false
+              args: |
+                'GET', 'https://httpbin.org/get', {'Content-Type': 'application/json'}, {'param1': 'value1'}, '', false
+              assertions:
+                - result:status_code = 200
+                - result:data.args is not null
+                - result:data.args:param1 = 'value1'
+          - test_udf:
+              name: test__live_udf_api_v2_post_jsonrpc_is_async_true
+              args: |
+                'POST',
+                'https://api.mainnet-beta.solana.com',
+                {'Content-Type': 'application/json'},
+                {
+                  'jsonrpc': '2.0',
+                  'id': 1,
+                  'method': 'getVersion'
+                },
+                '',
+                true
+              assertions:
+                - result:status_code = 200
+                - result:data.jsonrpc = '2.0'
+                - result:data.id = 1
+                - result:data.result is not null
+          - test_udf:
+              name: test__live_udf_api_v2_post_jsonrpc_is_async_false
+              args: |
+                'POST',
+                'https://api.mainnet-beta.solana.com',
+                {'Content-Type': 'application/json'},
+                {
+                  'jsonrpc': '2.0',
+                  'id': 1,
+                  'method': 'getVersion'
+                },
+                '',
+                false
+              assertions:
+                - result:status_code = 200
+                - result:data.jsonrpc = '2.0'
+                - result:data.id = 1
+                - result:data.result is not null
