--- a/models/deploy/marketplace/opensea/opensea__.yml
+++ b/models/deploy/marketplace/opensea/opensea__.yml
@@ -5,10 +5,12 @@ models:
       - name: get
         tests:
           - test_udf:
-              name: test_opensea__get_status_200
+              name: test_opensea__get_collection_stats_status_200
               args: >
-                '/health'
+                '/api/v2/collections/cryptopunks/stats'
                 , {}
               assertions:
                 - result:status_code = 200
                 - result:error IS NULL
+                - result:data IS NOT NULL
+                - result:data:total IS NOT NULL
