--- a/selectors.yml
+++ b/selectors.yml
@@ -14,3 +14,5 @@ selectors:
           - livequery_models.deploy.marketplace.playgrounds.* # API Endpoints not working
           - livequery_models.deploy.marketplace.strangelove.* # API Endpoints not working
           - livequery_models.deploy.marketplace.apilayer.* # API Endpoints not working
+          - livequery_models.deploy.marketplace.opensea.* # Requite wallet validated API Key
+          - livequery_models.deploy.marketplace.credmark.* # Requires API Key
