change defillama smaller results endpoint

--- a/models/deploy/marketplace/defillama/defillama__.yml
+++ b/models/deploy/marketplace/defillama/defillama__.yml
@@ -7,7 +7,7 @@ models:
           - test_udf:
               name: test_defillama__get_status_200
               args: >
-                '/protocols'
+                '/categories'
                 , {}
               assertions:
                 - result:status_code = 200
