Update GitHub Actions workflow to reduce thread count and add extensive API integration documentation
- Changed thread count from 24 to 5 in GitHub Actions workflows for improved performance.
- Added comprehensive README files for various API integrations including Alchemy, NBA All Day, API Layer, Binance, and more.
- Introduced new UDFs and UDTFs for Groq and Slack API integrations, enhancing functionality and usability.
- Implemented tests for new UDFs and UDTFs to ensure reliability and correctness.
- Updated existing UDF definitions and added new tests for enhanced coverage and robustness.

--- a/models/deploy/marketplace/github/github_utils__github_utils.yml
+++ b/models/deploy/marketplace/github/github_utils__github_utils.yml
@@ -9,3 +9,58 @@ models:
               assertions:
                 - result:status_code = 200
                 - result:error IS NULL
+                - result:data IS NOT NULL
+
+      - name: headers
+        tests:
+          - test_udf:
+              name: test_github_utils__headers_format
+              assertions:
+                - result IS NOT NULL
+                - LENGTH(result) > 50
+                - CONTAINS(result, 'Authorization')
+                - CONTAINS(result, 'X-GitHub-Api-Version')
+                - CONTAINS(result, 'Accept')
+
+      - name: get
+        tests:
+          - test_udf:
+              name: test_github_utils__get_user_repos
+              args: >
+                'user/FlipsideCrypto',
+                {'type': 'public', 'per_page': 5}
+              assertions:
+                - result:status_code = 200
+                - result:error IS NULL
+                - result:data IS NOT NULL
+          - test_udf:
+              name: test_github_utils__get_repo_info
+              args: >
+                'repos/FlipsideCrypto/admin-models',
+                {}
+              assertions:
+                - result:status_code = 200
+                - result:data:name = 'admin-models'
+                - result:data:owner:login = 'FlipsideCrypto'
+
+      - name: post
+        tests:
+          - test_udf:
+              name: test_github_utils__post_invalid_route
+              args: >
+                'invalid/test/route',
+                {'test': 'data'}
+              assertions:
+                - result:status_code = 404
+                - result IS NOT NULL
+
+      - name: put
+        tests:
+          - test_udf:
+              name: test_github_utils__put_invalid_route
+              args: >
+                'invalid/test/route',
+                {'test': 'data'}
+              assertions:
+                - result:status_code = 404
+                - result IS NOT NULL
